--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,6 +7,7 @@
     <body>
         <div class="main-content" >
         {{>header}}
+        <p>This site was created by Beetlebum. It uses data from mapbox.com and darksky.com.</p>
         <img src="/portrait.jpg" class="portrait"/>
         </div>        
         {{>footer}}
